gcc/testsuite/rust/rustc/ui/parser/issues/issue-110014_dg.rs
fn`2222222222222222222222222222222222222222() {}
// { dg-error "" "" { target *-*-* } .-1 }
// { dg-error "" "" { target *-*-* } .-2 }

